intermediate revision -added placeholder for image which were not commited yet